# advent-of-code-2021

./: pyproject.toml
day-01/: aoc_2021_01.py  test_aoc_2021_01.py
day-02/: aoc_2021_02.py  test_aoc_2021_02.py
day-03/: aoc_2021_03.py  test_aoc_2021_03.py
day-06/: aoc_2021_06.py  test_aoc_2021_06.py
templates/: solver.py  test_solver.py
